# BME280-Linux-EnvSense-Server

./: .gitmodules  CMakeLists.txt  README.md  sensor_client.cpp  sensor_serv.cpp  sensor_serv.h  sensor_server.cpp
common/: common.h  httplib.h  msgpack.hpp
device/: bme280.h  bme280_defs.h  bme280_mock.cpp  bme280_mock.h  bme280_wrapper.cpp  bme280_wrapper.h
driver/: i2c_driver.cpp  i2c_driver.h
envSense/: env_logging.cpp  sensor_client.cpp  sensor_server.cpp
envSense/common/: common.h
envSense/device/: bme280.c  bme280_wrapper.cpp  bme280_wrapper.h
envSense/driver/: i2c_driver.cpp
python-scripts/: parse-logs.py
